Fixed failing tests caused by immutable list.